analisador-sintatico-c/sintatico.output
Terminais sem uso na gramática

    BREAK
    SWITCH
    CASE
    DEFAULT
    TYPEDEF
    STRUCT
    POINTER


Gramática

    0 $accept: S $end

    1 S: programa EOP

    2 programa: declaracoes programa
    3         | funcao programa
    4         | %empty

    5 declaracoes: NUMBER_SIGN DEFINE IDENTIFIER expressao
    6            | declaracao_variaveis
    7            | declaracao_prototipos

    8 funcao: tipo loop_ponteiro IDENTIFIER parametros L_CURLY_BRACKET loop_variaveis comandos R_CURLY_BRACKET

    9 declaracao_variaveis: tipo declaracao_variaveis_prime SEMICOLON

   10 declaracao_variaveis_prime: loop_ponteiro IDENTIFIER loop_vetor opc_atribuicao declaracao_variaveis_double_prime

   11 declaracao_variaveis_double_prime: COMMA declaracao_variaveis_prime
   12                                  | %empty

   13 declaracao_prototipos: tipo loop_ponteiro IDENTIFIER parametros SEMICOLON

   14 parametros: L_PAREN opc_param R_PAREN

   15 parametros_prime: tipo loop_ponteiro IDENTIFIER opc_atribuicao parametros_double_prime

   16 parametros_double_prime: COMMA parametros_prime
   17                        | %empty

   18 opc_param: parametros_prime
   19          | %empty

   20 tipo: INT
   21     | CHAR
   22     | VOID

   23 bloco: L_CURLY_BRACKET comandos R_CURLY_BRACKET

   24 comandos: lista_comandos comandos
   25         | %empty

   26 lista_comandos: DO bloco WHILE L_PAREN expressao R_PAREN SEMICOLON
   27               | IF L_PAREN expressao R_PAREN bloco lista_comandos_if
   28               | WHILE L_PAREN expressao R_PAREN bloco
   29               | FOR L_PAREN lista_comandos_exp SEMICOLON lista_comandos_exp SEMICOLON lista_comandos_exp SEMICOLON R_PAREN bloco
   30               | PRINTF L_PAREN STRING lista_comandos_print R_PAREN SEMICOLON
   31               | SCANF L_PAREN STRING COMMA BITWISE_AND IDENTIFIER R_PAREN SEMICOLON
   32               | EXIT L_PAREN expressao R_PAREN SEMICOLON
   33               | RETURN lista_comandos_exp SEMICOLON
   34               | expressao SEMICOLON
   35               | SEMICOLON
   36               | bloco

   37 lista_comandos_if: ELSE bloco
   38                  | %empty

   39 lista_comandos_exp: expressao
   40                   | %empty

   41 lista_comandos_print: COMMA expressao
   42                     | %empty

   43 expressao: expressao_atribuicao expressao_prime

   44 expressao_prime: COMMA expressao
   45                | %empty

   46 expressao_atribuicao: expressao_condicional
   47                     | expressao_unaria expressao_atribuicao_prime expressao_atribuicao

   48 expressao_atribuicao_prime: ASSIGN
   49                           | ADD_ASSIGN
   50                           | MINUS_ASSIGN

   51 expressao_condicional: expressao_or_logico
   52                      | expressao_or_logico TERNARY_CONDITIONAL expressao COLON expressao_condicional

   53 expressao_or_logico: expressao_and_logico
   54                    | expressao_or_logico LOGICAL_OR expressao_and_logico

   55 expressao_and_logico: expressao_or
   56                     | expressao_and_logico LOGICAL_AND expressao_or

   57 expressao_or: expressao_xor
   58             | expressao_or BITWISE_OR expressao_xor

   59 expressao_xor: expressao_and
   60              | expressao_xor BITWISE_XOR expressao_and

   61 expressao_and: expressao_igualdade
   62              | expressao_and BITWISE_AND expressao_igualdade

   63 expressao_igualdade: expressao_relacional
   64                    | expressao_igualdade EQUAL expressao_relacional
   65                    | expressao_igualdade NOT_EQUAL expressao_relacional

   66 expressao_relacional: expressao_shift
   67                     | expressao_relacional LESS_THAN expressao_shift
   68                     | expressao_relacional LESS_EQUAL expressao_shift
   69                     | expressao_relacional GREATER_THAN expressao_shift
   70                     | expressao_relacional GREATER_EQUAL expressao_shift

   71 expressao_shift: expressao_aditiva
   72                | expressao_shift L_SHIFT expressao_aditiva
   73                | expressao_shift R_SHIFT expressao_aditiva

   74 expressao_aditiva: expressao_multiplicativa
   75                  | expressao_aditiva PLUS expressao_multiplicativa
   76                  | expressao_aditiva MINUS expressao_multiplicativa

   77 expressao_multiplicativa: expressao_cast
   78                         | expressao_multiplicativa MULTIPLY expressao_cast
   79                         | expressao_multiplicativa DIV expressao_cast
   80                         | expressao_multiplicativa REMAINDER expressao_cast

   81 expressao_cast: expressao_unaria
   82               | L_PAREN tipo loop_ponteiro R_PAREN expressao_cast

   83 expressao_unaria: expressao_pos_fixa
   84                 | INC expressao_unaria
   85                 | DEC expressao_unaria
   86                 | BITWISE_AND expressao_cast
   87                 | MULTIPLY expressao_cast
   88                 | PLUS expressao_cast
   89                 | MINUS expressao_cast
   90                 | BITWISE_NOT expressao_cast
   91                 | NOT expressao_cast

   92 expressao_pos_fixa: expressao_primaria
   93                   | expressao_pos_fixa expressao_pos_fixa_prime

   94 expressao_pos_fixa_prime: L_SQUARE_BRACKET expressao R_SQUARE_BRACKET
   95                         | INC
   96                         | DEC
   97                         | L_PAREN expressao_pos_fixa_double_prime R_PAREN

   98 expressao_pos_fixa_double_prime: expressao_atribuicao l_expressao_pos_fixa
   99                                | %empty

  100 l_expressao_pos_fixa: COMMA expressao_atribuicao l_expressao_pos_fixa
  101                     | %empty

  102 expressao_primaria: IDENTIFIER
  103                   | numero
  104                   | CHARACTER
  105                   | STRING
  106                   | L_PAREN expressao R_PAREN

  107 numero: NUM_INTEGER
  108       | NUM_HEXA
  109       | NUM_OCTAL

  110 loop_ponteiro: MULTIPLY loop_ponteiro
  111              | %empty

  112 loop_variaveis: declaracao_variaveis loop_variaveis
  113               | %empty

  114 loop_vetor: L_SQUARE_BRACKET expressao R_SQUARE_BRACKET loop_vetor
  115           | %empty

  116 opc_atribuicao: ASSIGN expressao_atribuicao
  117               | %empty


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    VOID (258) 22
    INT (259) 20
    CHAR (260) 21
    RETURN (261) 33
    BREAK (262)
    SWITCH (263)
    CASE (264)
    DEFAULT (265)
    DO (266) 26
    WHILE (267) 26 28
    FOR (268) 29
    IF (269) 27
    ELSE (270) 37
    TYPEDEF (271)
    STRUCT (272)
    PLUS (273) 75 88
    MINUS (274) 76 89
    MULTIPLY (275) 78 87 110
    DIV (276) 79
    REMAINDER (277) 80
    INC (278) 84 95
    DEC (279) 85 96
    BITWISE_AND (280) 31 62 86
    BITWISE_OR (281) 58
    BITWISE_NOT (282) 90
    BITWISE_XOR (283) 60
    NOT (284) 91
    LOGICAL_AND (285) 56
    LOGICAL_OR (286) 54
    EQUAL (287) 64
    NOT_EQUAL (288) 65
    LESS_THAN (289) 67
    GREATER_THAN (290) 69
    LESS_EQUAL (291) 68
    GREATER_EQUAL (292) 70
    R_SHIFT (293) 73
    L_SHIFT (294) 72
    ASSIGN (295) 48 116
    ADD_ASSIGN (296) 49
    MINUS_ASSIGN (297) 50
    SEMICOLON (298) 9 13 26 29 30 31 32 33 34 35
    COMMA (299) 11 16 31 41 44 100
    COLON (300) 52
    L_PAREN (301) 14 26 27 28 29 30 31 32 82 97 106
    R_PAREN (302) 14 26 27 28 29 30 31 32 82 97 106
    L_CURLY_BRACKET (303) 8 23
    R_CURLY_BRACKET (304) 8 23
    L_SQUARE_BRACKET (305) 94 114
    R_SQUARE_BRACKET (306) 94 114
    TERNARY_CONDITIONAL (307) 52
    NUMBER_SIGN (308) 5
    POINTER (309)
    PRINTF (310) 30
    SCANF (311) 31
    DEFINE (312) 5
    EXIT (313) 32
    IDENTIFIER (314) 5 8 10 13 15 31 102
    NUM_INTEGER (315) 107
    NUM_OCTAL (316) 109
    NUM_HEXA (317) 108
    STRING (318) 30 31 105
    CHARACTER (319) 104
    EOP (320) 1


Não terminais com as regras onde eles aparecem

    $accept (66)
        à esquerda: 0
    S (67)
        à esquerda: 1
        à direita: 0
    programa (68)
        à esquerda: 2 3 4
        à direita: 1 2 3
    declaracoes (69)
        à esquerda: 5 6 7
        à direita: 2
    funcao (70)
        à esquerda: 8
        à direita: 3
    declaracao_variaveis (71)
        à esquerda: 9
        à direita: 6 112
    declaracao_variaveis_prime (72)
        à esquerda: 10
        à direita: 9 11
    declaracao_variaveis_double_prime (73)
        à esquerda: 11 12
        à direita: 10
    declaracao_prototipos (74)
        à esquerda: 13
        à direita: 7
    parametros (75)
        à esquerda: 14
        à direita: 8 13
    parametros_prime (76)
        à esquerda: 15
        à direita: 16 18
    parametros_double_prime (77)
        à esquerda: 16 17
        à direita: 15
    opc_param (78)
        à esquerda: 18 19
        à direita: 14
    tipo (79)
        à esquerda: 20 21 22
        à direita: 8 9 13 15 82
    bloco (80)
        à esquerda: 23
        à direita: 26 27 28 29 36 37
    comandos (81)
        à esquerda: 24 25
        à direita: 8 23 24
    lista_comandos (82)
        à esquerda: 26 27 28 29 30 31 32 33 34 35 36
        à direita: 24
    lista_comandos_if (83)
        à esquerda: 37 38
        à direita: 27
    lista_comandos_exp (84)
        à esquerda: 39 40
        à direita: 29 33
    lista_comandos_print (85)
        à esquerda: 41 42
        à direita: 30
    expressao (86)
        à esquerda: 43
        à direita: 5 26 27 28 32 34 39 41 44 52 94 106 114
    expressao_prime (87)
        à esquerda: 44 45
        à direita: 43
    expressao_atribuicao (88)
        à esquerda: 46 47
        à direita: 43 47 98 100 116
    expressao_atribuicao_prime (89)
        à esquerda: 48 49 50
        à direita: 47
    expressao_condicional (90)
        à esquerda: 51 52
        à direita: 46 52
    expressao_or_logico (91)
        à esquerda: 53 54
        à direita: 51 52 54
    expressao_and_logico (92)
        à esquerda: 55 56
        à direita: 53 54 56
    expressao_or (93)
        à esquerda: 57 58
        à direita: 55 56 58
    expressao_xor (94)
        à esquerda: 59 60
        à direita: 57 58 60
    expressao_and (95)
        à esquerda: 61 62
        à direita: 59 60 62
    expressao_igualdade (96)
        à esquerda: 63 64 65
        à direita: 61 62 64 65
    expressao_relacional (97)
        à esquerda: 66 67 68 69 70
        à direita: 63 64 65 67 68 69 70
    expressao_shift (98)
        à esquerda: 71 72 73
        à direita: 66 67 68 69 70 72 73
    expressao_aditiva (99)
        à esquerda: 74 75 76
        à direita: 71 72 73 75 76
    expressao_multiplicativa (100)
        à esquerda: 77 78 79 80
        à direita: 74 75 76 78 79 80
    expressao_cast (101)
        à esquerda: 81 82
        à direita: 77 78 79 80 82 86 87 88 89 90 91
    expressao_unaria (102)
        à esquerda: 83 84 85 86 87 88 89 90 91
        à direita: 47 81 84 85
    expressao_pos_fixa (103)
        à esquerda: 92 93
        à direita: 83 93
    expressao_pos_fixa_prime (104)
        à esquerda: 94 95 96 97
        à direita: 93
    expressao_pos_fixa_double_prime (105)
        à esquerda: 98 99
        à direita: 97
    l_expressao_pos_fixa (106)
        à esquerda: 100 101
        à direita: 98 100
    expressao_primaria (107)
        à esquerda: 102 103 104 105 106
        à direita: 92
    numero (108)
        à esquerda: 107 108 109
        à direita: 103
    loop_ponteiro (109)
        à esquerda: 110 111
        à direita: 8 10 13 15 82 110
    loop_variaveis (110)
        à esquerda: 112 113
        à direita: 8 112
    loop_vetor (111)
        à esquerda: 114 115
        à direita: 10 114
    opc_atribuicao (112)
        à esquerda: 116 117
        à direita: 10 15


Estado 0

    0 $accept: . S $end

    VOID         deslocar, e ir ao estado 1
    INT          deslocar, e ir ao estado 2
    CHAR         deslocar, e ir ao estado 3
    NUMBER_SIGN  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (programa)

    S                      ir ao estado 5
    programa               ir ao estado 6
    declaracoes            ir ao estado 7
    funcao                 ir ao estado 8
    declaracao_variaveis   ir ao estado 9
    declaracao_prototipos  ir ao estado 10
    tipo                   ir ao estado 11


Estado 1

   22 tipo: VOID .

    $padrão  reduzir usando a regra 22 (tipo)


Estado 2

   20 tipo: INT .

    $padrão  reduzir usando a regra 20 (tipo)


Estado 3

   21 tipo: CHAR .

    $padrão  reduzir usando a regra 21 (tipo)


Estado 4

    5 declaracoes: NUMBER_SIGN . DEFINE IDENTIFIER expressao

    DEFINE  deslocar, e ir ao estado 12


Estado 5

    0 $accept: S . $end

    $end  deslocar, e ir ao estado 13


Estado 6

    1 S: programa . EOP

    EOP  deslocar, e ir ao estado 14


Estado 7

    2 programa: declaracoes . programa

    VOID         deslocar, e ir ao estado 1
    INT          deslocar, e ir ao estado 2
    CHAR         deslocar, e ir ao estado 3
    NUMBER_SIGN  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (programa)

    programa               ir ao estado 15
    declaracoes            ir ao estado 7
    funcao                 ir ao estado 8
    declaracao_variaveis   ir ao estado 9
    declaracao_prototipos  ir ao estado 10
    tipo                   ir ao estado 11


Estado 8

    3 programa: funcao . programa

    VOID         deslocar, e ir ao estado 1
    INT          deslocar, e ir ao estado 2
    CHAR         deslocar, e ir ao estado 3
    NUMBER_SIGN  deslocar, e ir ao estado 4

    $padrão  reduzir usando a regra 4 (programa)

    programa               ir ao estado 16
    declaracoes            ir ao estado 7
    funcao                 ir ao estado 8
    declaracao_variaveis   ir ao estado 9
    declaracao_prototipos  ir ao estado 10
    tipo                   ir ao estado 11


Estado 9

    6 declaracoes: declaracao_variaveis .

    $padrão  reduzir usando a regra 6 (declaracoes)


Estado 10

    7 declaracoes: declaracao_prototipos .

    $padrão  reduzir usando a regra 7 (declaracoes)


Estado 11

    8 funcao: tipo . loop_ponteiro IDENTIFIER parametros L_CURLY_BRACKET loop_variaveis comandos R_CURLY_BRACKET
    9 declaracao_variaveis: tipo . declaracao_variaveis_prime SEMICOLON
   13 declaracao_prototipos: tipo . loop_ponteiro IDENTIFIER parametros SEMICOLON

    MULTIPLY  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 111 (loop_ponteiro)

    declaracao_variaveis_prime  ir ao estado 18
    loop_ponteiro               ir ao estado 19


Estado 12

    5 declaracoes: NUMBER_SIGN DEFINE . IDENTIFIER expressao

    IDENTIFIER  deslocar, e ir ao estado 20


Estado 13

    0 $accept: S $end .

    $padrão  aceitar


Estado 14

    1 S: programa EOP .

    $padrão  reduzir usando a regra 1 (S)


Estado 15

    2 programa: declaracoes programa .

    $padrão  reduzir usando a regra 2 (programa)


Estado 16

    3 programa: funcao programa .

    $padrão  reduzir usando a regra 3 (programa)


Estado 17

  110 loop_ponteiro: MULTIPLY . loop_ponteiro

    MULTIPLY  deslocar, e ir ao estado 17

    $padrão  reduzir usando a regra 111 (loop_ponteiro)

    loop_ponteiro  ir ao estado 21


Estado 18

    9 declaracao_variaveis: tipo declaracao_variaveis_prime . SEMICOLON

    SEMICOLON  deslocar, e ir ao estado 22


Estado 19

    8 funcao: tipo loop_ponteiro . IDENTIFIER parametros L_CURLY_BRACKET loop_variaveis comandos R_CURLY_BRACKET
   10 declaracao_variaveis_prime: loop_ponteiro . IDENTIFIER loop_vetor opc_atribuicao declaracao_variaveis_double_prime
   13 declaracao_prototipos: tipo loop_ponteiro . IDENTIFIER parametros SEMICOLON

    IDENTIFIER  deslocar, e ir ao estado 23


Estado 20

    5 declaracoes: NUMBER_SIGN DEFINE IDENTIFIER . expressao

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 32
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao                 ir ao estado 39
    expressao_atribuicao      ir ao estado 40
    expressao_condicional     ir ao estado 41
    expressao_or_logico       ir ao estado 42
    expressao_and_logico      ir ao estado 43
    expressao_or              ir ao estado 44
    expressao_xor             ir ao estado 45
    expressao_and             ir ao estado 46
    expressao_igualdade       ir ao estado 47
    expressao_relacional      ir ao estado 48
    expressao_shift           ir ao estado 49
    expressao_aditiva         ir ao estado 50
    expressao_multiplicativa  ir ao estado 51
    expressao_cast            ir ao estado 52
    expressao_unaria          ir ao estado 53
    expressao_pos_fixa        ir ao estado 54
    expressao_primaria        ir ao estado 55
    numero                    ir ao estado 56


Estado 21

  110 loop_ponteiro: MULTIPLY loop_ponteiro .

    $padrão  reduzir usando a regra 110 (loop_ponteiro)


Estado 22

    9 declaracao_variaveis: tipo declaracao_variaveis_prime SEMICOLON .

    $padrão  reduzir usando a regra 9 (declaracao_variaveis)


Estado 23

    8 funcao: tipo loop_ponteiro IDENTIFIER . parametros L_CURLY_BRACKET loop_variaveis comandos R_CURLY_BRACKET
   10 declaracao_variaveis_prime: loop_ponteiro IDENTIFIER . loop_vetor opc_atribuicao declaracao_variaveis_double_prime
   13 declaracao_prototipos: tipo loop_ponteiro IDENTIFIER . parametros SEMICOLON

    L_PAREN           deslocar, e ir ao estado 57
    L_SQUARE_BRACKET  deslocar, e ir ao estado 58

    $padrão  reduzir usando a regra 115 (loop_vetor)

    parametros  ir ao estado 59
    loop_vetor  ir ao estado 60


Estado 24

   88 expressao_unaria: PLUS . expressao_cast

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 32
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao_cast      ir ao estado 61
    expressao_unaria    ir ao estado 62
    expressao_pos_fixa  ir ao estado 54
    expressao_primaria  ir ao estado 55
    numero              ir ao estado 56


Estado 25

   89 expressao_unaria: MINUS . expressao_cast

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 32
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao_cast      ir ao estado 63
    expressao_unaria    ir ao estado 62
    expressao_pos_fixa  ir ao estado 54
    expressao_primaria  ir ao estado 55
    numero              ir ao estado 56


Estado 26

   87 expressao_unaria: MULTIPLY . expressao_cast

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 32
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao_cast      ir ao estado 64
    expressao_unaria    ir ao estado 62
    expressao_pos_fixa  ir ao estado 54
    expressao_primaria  ir ao estado 55
    numero              ir ao estado 56


Estado 27

   84 expressao_unaria: INC . expressao_unaria

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 65
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao_unaria    ir ao estado 66
    expressao_pos_fixa  ir ao estado 54
    expressao_primaria  ir ao estado 55
    numero              ir ao estado 56


Estado 28

   85 expressao_unaria: DEC . expressao_unaria

    PLUS         deslocar, e ir ao estado 24
    MINUS        deslocar, e ir ao estado 25
    MULTIPLY     deslocar, e ir ao estado 26
    INC          deslocar, e ir ao estado 27
    DEC          deslocar, e ir ao estado 28
    BITWISE_AND  deslocar, e ir ao estado 29
    BITWISE_NOT  deslocar, e ir ao estado 30
    NOT          deslocar, e ir ao estado 31
    L_PAREN      deslocar, e ir ao estado 65
    IDENTIFIER   deslocar, e ir ao estado 33
    NUM_INTEGER  deslocar, e ir ao estado 34
    NUM_OCTAL    deslocar, e ir ao estado 35
    NUM_HEXA     deslocar, e ir ao estado 36
    STRING       deslocar, e ir ao estado 37
    CHARACTER    deslocar, e ir ao estado 38

    expressao_unaria    ir ao estado 67
    expressao_pos_fixa  ir ao estado 54
    expressao_primaria  ir ao estado 55
    numero              ir ao estado 56


Estado 29

   86 expressao_unaria: BITWISE_AND . expressao_cast
